--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -23,27 +23,38 @@ h3 {
     padding: 10px;
 }
 body {
-  padding:50px;
+  padding:10px;
 }
 a{
   text-decoration: none;
 }
 /*--Navbar--*/
 .back {
-	background-color: #9999ff;
+	background-color: #ffff1a;
 }
 .navbar-fixed-top{
-	background-color: #00284d;
+	background-color: #1a1a1a;
 }
-.navbar-collapse a{ 
+.navbar-nav a{ 
 	color: white;
 	font-family: 'Montserrat', sans-serif;
 }
+.navbar-header a{
+	color : white;
+	font-family: 'Hammersmith One', sans-serif;
+	font-size: 20px;
+	margin-top: 2px;
+}
+.navbar-header:hover a{
+	color: #ec1313;
+}
+
 #login-dp{
     min-width: 250px;
     padding: 14px 14px 0;
     overflow:hidden;
-    background-color:rgba(255,255,255,.8);
+    background-color:rgba(255,255,26,.3);
+    margin-top: 2px;
 }
 #login-dp .help-block{
     font-size:12px    
@@ -89,9 +100,12 @@ a{
         border-top:0 none;
     }
 }
+.text-center a {
+	color : black;
+}
 
 .col-md-5 {
-	margin-left: 15px;
+	margin-left: px;
 	padding-top: 8px;
 }
 /*Navbar End*/
@@ -143,7 +157,7 @@ li.dropdown {
 .carousel {
   height: 500px;
   margin-bottom: 60px;
-  margin-top: 50px;
+  margin-top: 90px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -168,6 +182,40 @@ li.dropdown {
   height: 500px;
 }
 
+/*Button*/
+.carousel-caption a {
+    background-color: #ffff1a;
+    color: white;
+    border: 5px solid white;
+    font-family: 'Montserrat', sans-serif;
+    padding: 20px 60px 20px 60px;
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  color: white;
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  color: white;
+  opacity: 1;
+  right: 0;
+}
 /*--Pengenalan--*/
 .boxA,
 .boxB,
@@ -328,6 +376,88 @@ li.dropdown {
 }
 /*--Footer End--*/
 
+/*--Halaman Login--*/
+@import url(http://weloveiconfonts.com/api/?family=brandico|entypo|openwebicons|zocial);
+
+/* brandico */
+[class*="brandico-"]:before {
+  font-family: 'brandico', sans-serif;
+}
+
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
+
+/* openwebicons */
+[class*="openwebicons-"]:before {
+  font-family: 'OpenWeb Icons', sans-serif;
+}
+
+/* zocial */
+[class*="zocial-"]:before {
+  font-family: 'zocial', sans-serif;
+}
+
+.form-signin{
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+
+.login-input {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.login-input-pass {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+
+.signup-input {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.signup-input-confirm {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.create-account {
+  text-align: center;
+  width: 100%;
+  display: block;
+}
+
+.form-signin .form-control {
+  position: relative;
+  font-size: 16px;
+  height: auto;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.btn-center{
+  width: 50%;
+  text-align: center;
+  margin: inherit;
+}
+
+.btn-social.btn-lg{padding-left:61px}.btn-social.btn-lg :first-child{line-height:45px;width:45px;font-size:1.8em}
+.btn-social{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.btn-social :first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:34px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
+.btn-facebook{color:#fff;background-color:#3b5998;border-color:rgba(0,0,0,0.2)}.btn-facebook:hover,.btn-facebook:focus,.btn-facebook:active,.btn-facebook.active,.open .dropdown-toggle.btn-facebook{color:#fff;background-color:#30487b;border-color:rgba(0,0,0,0.2)}
+.btn-facebook:active,.btn-facebook.active,.open .dropdown-toggle.btn-facebook{background-image:none}
+.btn-google-plus{color:#fff;background-color:#dd4b39;border-color:rgba(0,0,0,0.2)}.btn-google-plus:hover,.btn-google-plus:focus,.btn-google-plus:active,.btn-google-plus.active,.open .dropdown-toggle.btn-google-plus{color:#fff;background-color:#ca3523;border-color:rgba(0,0,0,0.2)}
+.btn-google-plus:active,.btn-google-plus.active,.open .dropdown-toggle.btn-google-plus{background-image:none}
 /*--Register--*/
 .body-guru {
     background-image: url(../pic/edu.JPG);
