--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -27,6 +27,7 @@ body {
 }
 a{
   text-decoration: none;
+  color: #fff;
 }
 /*--Navbar--*/
 .back {
@@ -184,9 +185,10 @@ li.dropdown {
 
 /*Button*/
 .carousel-caption a {
-    background-color: #ffff1a;
-    color: white;
-    border: 5px solid white;
+    background-color: #1a1a1a;
+    color: #737373;
+    border: 5px solid #737373;
+    border-radius: 5px;
     font-family: 'Montserrat', sans-serif;
     padding: 20px 60px 20px 60px;
 }
@@ -377,9 +379,7 @@ li.dropdown {
 /*--Footer End--*/
 
 /*--Halaman Login--*/
-@import url(http://weloveiconfonts.com/api/?family=brandico|entypo|openwebicons|zocial);
 
-/* brandico */
 [class*="brandico-"]:before {
   font-family: 'brandico', sans-serif;
 }
@@ -445,19 +445,6 @@ li.dropdown {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-.btn-center{
-  width: 50%;
-  text-align: center;
-  margin: inherit;
-}
-
-.btn-social.btn-lg{padding-left:61px}.btn-social.btn-lg :first-child{line-height:45px;width:45px;font-size:1.8em}
-.btn-social{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.btn-social :first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:34px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
-.btn-facebook{color:#fff;background-color:#3b5998;border-color:rgba(0,0,0,0.2)}.btn-facebook:hover,.btn-facebook:focus,.btn-facebook:active,.btn-facebook.active,.open .dropdown-toggle.btn-facebook{color:#fff;background-color:#30487b;border-color:rgba(0,0,0,0.2)}
-.btn-facebook:active,.btn-facebook.active,.open .dropdown-toggle.btn-facebook{background-image:none}
-.btn-google-plus{color:#fff;background-color:#dd4b39;border-color:rgba(0,0,0,0.2)}.btn-google-plus:hover,.btn-google-plus:focus,.btn-google-plus:active,.btn-google-plus.active,.open .dropdown-toggle.btn-google-plus{color:#fff;background-color:#ca3523;border-color:rgba(0,0,0,0.2)}
-.btn-google-plus:active,.btn-google-plus.active,.open .dropdown-toggle.btn-google-plus{background-image:none}
 /*--Register--*/
 .body-guru {
     background-image: url(../pic/edu.JPG);
