--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -298,6 +298,9 @@ div#OR {
 .fa-google-plus{
 	margin-right: 20%;
 }
+.btn-group-justified{
+	padding: 5px;
+}
 /*--Login Selesai--*/
 
 /*--Siapa Yang Mengajari--*/
@@ -376,22 +379,93 @@ div#OR {
   height: auto;
   box-shadow: 1px 1px 10px 0.3px grey;
 }
+.hovereffect {
+width:100%;
+height:100%;
+float:left;
+overflow:hidden;
+position:relative;
+text-align:center;
+cursor:default;
+padding: 10px;
+}
 
-.cat-item:hover div.cap-item{
-  display: block;
-  height: auto;
-  margin: -4px 0px 0px 3px;
-  padding: 10px;
+.hovereffect .overlay {
+width:100%;
+height:100%;
+position:absolute;
+overflow:hidden;
+top:0;
+left:0;
+opacity:0;
+background-color:rgba(0,0,0,0.5);
+-webkit-transition:all .4s ease-in-out;
+transition:all .4s ease-in-out
 }
-.cap-item{
-  display: none;
-  height: 370px;
-  width: 98.5%;
+
+.hovereffect img {
+display:block;
+position:relative;
+-webkit-transition:all .4s linear;
+transition:all .4s linear;
 }
-.cap-item h5{
-  color: grey;
-  margin: -10px 0px 0px 0px;
-  text-decoration: none;
+
+.hovereffect h2 {
+text-transform:uppercase;
+color:#fff;
+text-align:center;
+position:relative;
+font-size:17px;
+background:rgba(0,0,0,0.6);
+-webkit-transform:translatey(-100px);
+-ms-transform:translatey(-100px);
+transform:translatey(-100px);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+padding:10px;
+}
+
+.hovereffect a.info {
+text-decoration:none;
+display:inline-block;
+text-transform:uppercase;
+color:#fff;
+border:1px solid #fff;
+background-color:transparent;
+opacity:0;
+filter:alpha(opacity=0);
+-webkit-transition:all .2s ease-in-out;
+transition:all .2s ease-in-out;
+margin:50px 0 0;
+padding:7px 14px;
+}
+
+.hovereffect a.info:hover {
+box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+-ms-transform:scale(1.2);
+-webkit-transform:scale(1.2);
+transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+opacity:1;
+filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+opacity:1;
+filter:alpha(opacity=100);
+-ms-transform:translatey(0);
+-webkit-transform:translatey(0);
+transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+-webkit-transition-delay:.2s;
+transition-delay:.2s;
 }
 /*--Tempat Kursus End--*/
 
@@ -436,7 +510,7 @@ div#OR {
 }
 /*--Footer End--*/
 
-/*--Halaman Login--*/
+/*--Login landing page--*/
 
 [class*="brandico-"]:before {
   font-family: 'brandico', sans-serif;
@@ -503,320 +577,3 @@ div#OR {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-/*--Register--*/
-.body-guru {
-    background-image: url(../pic/edu.JPG);
-    background-size: cover;
-}
-.body-murid{
-    background-image: url(../pic/study.jpg);
-    background-size: cover;
-}
-.caption-top h1{
-    color: white;
-    font-family: 'Poppins', sans-serif; 
-}
-.caption-top p{
-    color: white;
-    font-family: 'Poppins', sans-serif; 
-}
-.register {
-  background-color: grey;
-  background: rgba(0,0,0,0.6);
-  border-radius: 5px;
-  float: left;
-  padding-right: 25px;
-  width: 350px;
-}
-.regis h3{
-  color: white;
-  text-align: center;
-}
-.regis label{
-  color: green;
-}
-.register .regis .input-group{
-  padding: 2px;
-}
-.register-api{
-  background-color: grey;
-  background: rgba(0,0,0,0.6);
-  border-radius: 5px;
-  float: right;
-  width: 300px;
-}
-.register h3{
-  text-align: center;
-}
-.register-api .regis{
-  padding: 50px;
-}
-.regis .api-button img{
-  height: 45px;
-  padding: 2px;
-  width: 200px;
-}
-.register li{
-  color: grey;
-  border: 1px solid;
-  border-radius: 3px;
-  margin: 5px;
-  padding: 5px;
-  width: 300px;
-  list-style-type: none;
-}
-.register .pilih {
-  margin-top: 10px;
-  list-style-type: none;
-  border: none;
-  color: black;
-}
-.register .tao {
-  margin-top: 10px;
-  list-style-type: none;
-  border: none;
-  color: black
-}
-.register .button {
-  border: none;
-  list-style-type: none;
-  margin-top: 10px;
-}
-.register .glyphicon-education {
-    align-items: center;
-    display: flex;
-}
-/*--Register End--*/
-
-/*--Akun Murid--*/
-.navig .member {
-  float: right;
-}
-/*--Akun Murid End--*/
-
-/*--Profile--*/
-.kiri {
-  line-height:30px;
-    background-color:#eeeeee;
-    height:auto;
-    width:20%;
-    float:left;
-    padding-top:100px; 
-}
-.kiri .profile {
-  padding: 1em;
-}
-.profile .foto {
-  padding-left: 3.5em;
-}
-.profile .img-circle {
-  width: 140px;
-  height: 140px;
-}
-.profile h4 {
-  text-align: center;
-}
-form .stars {
-  background: url("../pic/stars.png") repeat-x 0 0;
-  width: 150px;
-  margin: 0 auto;
-}
-
-form .stars input[type="radio"] {
-  position: absolute;
-  opacity: 0;
-  filter: alpha(opacity=0);
-}
-form .stars input[type="radio"].star-5:checked ~ span {
-  width: 100%;
-}
-form .stars input[type="radio"].star-4:checked ~ span {
-  width: 80%;
-}
-form .stars input[type="radio"].star-3:checked ~ span {
-  width: 60%;
-}
-form .stars input[type="radio"].star-2:checked ~ span {
-  width: 40%;
-}
-form .stars input[type="radio"].star-1:checked ~ span {
-  width: 20%;
-}
-form .stars label {
-  display: block;
-  width: 30px;
-  height: 30px;
-  margin: 0!important;
-  padding: 0!important;
-  text-indent: -999em;
-  float: left;
-  position: relative;
-  z-index: 10;
-  background: transparent!important;
-  cursor: pointer;
-}
-form .stars label:hover ~ span {
-  background-position: 0 -30px;
-}
-form .stars label.star-5:hover ~ span {
-  width: 100% !important;
-}
-form .stars label.star-4:hover ~ span {
-  width: 80% !important;
-}
-form .stars label.star-3:hover ~ span {
-  width: 60% !important;
-}
-form .stars label.star-2:hover ~ span {
-  width: 40% !important;
-}
-form .stars label.star-1:hover ~ span {
-  width: 20% !important;
-}
-form .stars span {
-  display: block;
-  width: 0;
-  position: relative;
-  top: 0;
-  left: 0;
-  height: 30px;
-  background: url("../pic/stars.png") repeat-x 0 -60px;
-  -webkit-transition: -webkit-width 0.5s;
-  -moz-transition: -moz-width 0.5s;
-  -ms-transition: -ms-width 0.5s;
-  -o-transition: -o-width 0.5s;
-  transition: width 0.5s;
-}
-
-.profile .btn-group {
-  padding-top: 1em;
-  padding-left: 4.5em;
-}
-.profile .glyphicon-cog {
-  height: auto;
-}
-/*--Profile End--*/
-
-/*Kelas*/
-.ikut{
-  width: 950px;
-  height: 517px;
-  float: left;
-}
-
-.kelas {
-  width: 900px;
-}
-.kelas .img-rounded{
-  width: 200px;
-  height: 200px;
-}
-.kelas .mrd{
-  margin-left: 200px;
-}
-/*Kelas End*/
-
-/*Category Start*/
-.caption {
-  margin: 100px 0px 50px 0px;
-}
-.caption h3 {
-  font-family: 'Poppins',sans-serif;
-  text-align: center;
-}
-
-.insert{ 
-  margin: 0px 0px 5% 38%;
-}
-.insert input{
-  background-color: #9fbfdf;
-}
-input:focus{
-  outline: none;
-}
-input{
-  padding: 5px;
-  width: 37%;
-}
-input[type=text]{
-  border: 0px;
-  cursor: text;
-}
-.underline{
-  background-color: #ebebeb;
-  transition: color 1s,background 1s,border 1s,text-shadow 1s;
-  z-index: 0;
-  height: 5px;
-  margin-top: -4px;
-  width: 40%;
-}
-input:focus ~ .underline{
-  background-color: red;
-}
-
-.category-grid {
-  background-color: aqua;
-  margin: 10px;
-  padding: 20px;
-}
-.category-grid p {
-  font-family: 'Poppins',sans-serif;
-  font-size: 18px;
-  text-decoration-line: none;
-}
-.category-grid:hover div.cap-category{
-  display: block;
-  background-color: rgba(242, 242, 242, 0.8);
-}
-.category-grid:hover div.cap-category a{
-  text-decoration: none;
-}
-.cap-category{
-  bottom: 10%;
-  cursor: pointer;
-  display: none;
-  height: 80%;
-  left: 25px;
-  padding: 20px;
-  position: absolute;
-  width: 83%;
-}
-/*Category End*/
-
-/*Tab Bantuan Start*/
-#tabs{
-  height: 100%;
-  padding: 5.5% 0px 0px 0px;
-  width: 100%;
-}
-.ui-tabs-vertical {
- width: 60em; 
-}
-.ui-tabs-vertical .ui-tabs-nav { 
-  padding: .5em .1em .2em .2em; 
-  float: left; 
-  width: 10em; 
-}
-.ui-tabs-vertical .ui-tabs-nav li { 
-  clear: left; 
-  width: 100%; 
-  border-bottom-width: 1px !important; 
-  border-right-width: 0 !important; 
-  margin: 0 -1px .2em 0; 
-}
-.ui-tabs-vertical .ui-tabs-nav li a { 
-  display:block; 
-}
-.ui-tabs-vertical .ui-tabs-nav li.ui-tabs-active { 
-  padding-bottom: 0; 
-  padding-right: .1em; 
-  border-right-width: 1px; 
-}
-.ui-tabs-vertical .ui-tabs-panel { 
-  padding: 1em; 
-  float: right; 
-  width: 40em;
-}
-/*Tab Bantuan End*/
-
-
