--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -577,3 +577,62 @@ transition-delay:.2s;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+/*coba our team*/
+
+body {
+  font-family: "Open Sans";
+  line-height: 26px;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Open Sans";
+  font-weight: 300;
+}
+h1 {
+  font-size: 46px;
+}
+h2 {
+  font-size: 44px;
+}
+h3 {
+  font-size: 32px;
+}
+h4 {
+  font-size: 24px;
+}
+h5 {
+  font-size: 22px;
+  line-height: 30px;
+}
+h6 {
+  font-size: 20px;
+}
+.section {
+  color: #5c6166;
+}
+.hr.invisible_hr {
+    height: 0;
+    padding: 0;
+}
+.hr.big_size_hr {
+    margin: 30px 0;
+}
+.hr {
+    clear: both;
+    display: block;
+    font-size: 0;
+    height: 24px;
+    margin: 20px 0;
+    overflow: hidden;
+    padding: 2px 0;
+    position: relative;
+    text-align: center;
+    width: 100%;
+}
+.highlight_secondary {
+    color: #F24046;
+}
+.team-role {
+    color: #A4A7AA;
+}
+/*coba our team*/
